# gama_tts

./: .gitignore  CMakeLists.txt  INSTALL  NOTES  README  README.md  gama_tts.pc.pre
data/en/vtm0/: voice_male.config  vtm.config
data/en/vtm5/: interactive.config  voice_baby.config  voice_female.config  voice_male.config  vtm.config
data/english/template/: artic.xml  interactive.txt  voice_baby.config  voice_female.config  voice_large_child.config  voice_male.config  voice_small_child.txt  vtm.config  vtm.txt  vtm_control_model.config
data/english/vtm0/: README  _index.txt  artic.xml  interactive.config  interactive.txt  jack.txt  voice_baby.config  voice_baby.txt  voice_female.config  voice_large_child.config  voice_male.txt  voice_small_child.config  vtm.config  vtm_control_model.config
data/english/vtm1/: intonation_rhythm  main_dictionary.txt  text_parser  voice_small_child.config  vtm.config
data/english/vtm2/: phonetic_string_parser  vowelTransitions  vtm.config
data/english/vtm3/: MainDictionary  (+7 more)
doc/: README.md  data.txt  gen_site.py  notes.txt  phonetic_string.txt  usage.txt  vocal_tract_models.txt
doc/src_img/: gama_tts.svgz
gama_tts/: CMakeLists.txt  INSTALL  INSTALL.txt  NOTES  README.md
gama_tts/doc/: vocal_tract_models.txt
gama_tts/src/: ConfigurationData.cpp  ConfigurationData.h  Dictionary.cpp  Dictionary.h  ParameterLogger.h  StringMap.h  Text.cpp  global.h  main.cpp
gama_tts_editor/: CMakeLists.txt  INSTALL  INSTALL.txt  README.md
gama_tts_editor/resource/: gama_tts_editor.qrc
gama_tts_editor/src/: AppConfig.h  AudioPlayer.cpp  AudioPlayer.h  AudioWorker.cpp  AudioWorker.h  Clipboard.cpp  Clipboard.h  DataEntryWindow.cpp  DataEntryWindow.h  Figure2DWidget.cpp  Figure2DWidget.h  IntonationParametersWindow.cpp  IntonationParametersWindow.h  IntonationWidget.cpp  IntonationWidget.h  IntonationWindow.cpp  IntonationWindow.h  JackClient.cpp  JackClient.h  JackConfig.cpp  JackConfig.h  JackRingbuffer.cpp  JackRingbuffer.h  MainWindow.cpp  MainWindow.h  ParameterModificationSynthesis.cpp  ParameterModificationSynthesis.h  ParameterModificationWidget.cpp  ParameterModificationWidget.h  ParameterModificationWindow.cpp  ParameterModificationWindow.h  ParameterWidget.cpp  ParameterWidget.h  PostureEditorWindow.cpp  PostureEditorWindow.h  PrototypeManagerWindow.cpp  PrototypeManagerWindow.h  RuleManagerWindow.cpp  RuleManagerWindow.h  RuleTesterWindow.cpp  (+13 more)
gama_tts_editor/src/interactive/: AnalysisWindow.cpp  AnalysisWindow.h  FFTW.cpp  FFTW.h  InteractiveAudio.cpp  InteractiveAudio.h  InteractiveVTMConfiguration.cpp  InteractiveVTMConfiguration.h  InteractiveVTMWindow.cpp  InteractiveVTMWindow.h  ParameterLineEdit.cpp  ParameterLineEdit.h  ParameterSlider.cpp  ParameterSlider.h  SignalDFT.cpp  SignalDFT.h
gama_tts_editor/src/qt_model/: CategoryModel.cpp  CategoryModel.h  ParameterModel.cpp  ParameterModel.h  SymbolModel.cpp  SymbolModel.h
gama_tts_editor/ui/: DataEntryWindow.ui  IntonationParametersWindow.ui  IntonationWindow.ui  MainWindow.ui  ParameterModificationWindow.ui  PostureEditorWindow.ui  PrototypeManagerWindow.ui  RuleManagerWindow.ui  RuleTesterWindow.ui  SynthesisWindow.ui  TransitionEditorWindow.ui
gama_tts_editor/ui/interactive/: AnalysisWindow.ui
speechd_module/: CMakeLists.txt  INSTALL  INSTALL.txt  LICENSE_RtAudio  README.md
speechd_module/conf/: gama_tts.conf.pre
speechd_module/src/: ModuleConfiguration.cpp  ModuleConfiguration.h  ModuleController.cpp  ModuleController.h  SynthesizerController.cpp  SynthesizerController.h  Util.cpp  Util.h  main.cpp
speechd_module/src/rtaudio/: RtAudio.cmake  RtAudio.cpp  RtAudio.h
src/: ConfigurationData.cpp  ConfigurationData.h  Dictionary.cpp  Exception.cpp  Exception.h  Index.cpp  Index.h  ParameterLogger.h  StringMap.cpp  StringMap.h  Text.cpp  Text.h  VocalTractModelParameterValue.h  WAVEFileWriter.h  global.h  main.cpp
src/en/: NumberPronunciations.h
src/english/: ApplyStress.cpp  EnglishTextParser.cpp  EnglishTextParser.h  IspTrans.cpp  IspTrans.h  LetterToSound.cpp  LetterToSound.h  NumberParser.cpp  NumberParser.h
src/plugin/: vtm_gama_tts_0.cpp  vtm_gama_tts_0.h  vtm_gama_tts_1.cpp  vtm_gama_tts_1.h  vtm_gama_tts_2.cpp  vtm_gama_tts_2.h  vtm_gama_tts_3.cpp  vtm_gama_tts_3.h  vtm_gama_tts_4.cpp  vtm_gama_tts_4.h  vtm_gama_tts_5.cpp  vtm_gama_tts_5.h  vtm_plugin.cpp  vtm_plugin.h
src/text_parser/: DictionarySearch.cpp  DictionarySearch.h  ExternalTextParser.cpp  ExternalTextParser.h  TextParser.cpp  TextParser.h
src/trm/: TRMUtil.cpp  TRMUtil.h  Tube.cpp  Tube.h  gama_tts_trm.cpp
src/vtm/: BandpassFilter.cpp  BandpassFilter.h  Butterworth1LowpassFilter.h  Butterworth2LowpassFilter.h  DifferenceFilter.h  FIRFilter.cpp  FIRFilter.h  MovingAverageFilter.h  NoiseFilter.cpp  NoiseFilter.h  NoiseSource.cpp  NoiseSource.h  PoleZeroRadiationImpedance.h  RadiationFilter.cpp  RadiationFilter.h  ReflectionFilter.cpp  ReflectionFilter.h  RosenbergBGlottalSource.h  SampleRateConverter.cpp  SampleRateConverter.h  Throat.cpp  Throat.h  VTMConfiguration.cpp  VTMConfiguration.h  VTMUtil.cpp  VTMUtil.h  VocalTractModel.cpp  VocalTractModel.h  VocalTractModel0.cpp  VocalTractModel0.h  VocalTractModel2.h  VocalTractModel4.h  VocalTractModel5.h  WavetableGlottalSource.cpp  WavetableGlottalSource.h  WavetableGlottalSourceFIRFilter.h  gama_tts_vtm.cpp
src/vtm_control_model/: Category.h  Controller.cpp  Controller.h  DictionarySearch.cpp  DriftGenerator.cpp  DriftGenerator.h  Equation.cpp  Equation.h  EventList.cpp  EventList.h  FormulaSymbol.cpp  FormulaSymbol.h  IntonationPoint.cpp  IntonationPoint.h  IntonationRhythm.cpp  IntonationRhythm.h  Model.cpp  Model.h  Pho1Parser.cpp  Pho1Parser.h  PhoneticStringParser.cpp  PhoneticStringParser.h  Posture.cpp  Posture.h  PostureList.h  Rule.cpp  Rule.h  TextParser.cpp  TextParser.h  Transition.cpp  Transition.h  VTMControlModelConfiguration.cpp  VTMControlModelConfiguration.h  XMLConfigFileReader.cpp  XMLConfigFileReader.h  XMLConfigFileWriter.cpp  XMLConfigFileWriter.h
src/xml/: RapidXmlUtil.cpp  RapidXmlUtil.h  StreamXMLWriter.h
(+206 files in other folders)
